# Processor

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  new_test  new_test.cpp  processor.cpp  processor.h
compiler/: Makefile  assembly
compiler/cppfiles/: assembler.cpp  commands.cpp  main.cpp
compiler/headers/: assembler.h  commands.h
include/common/: instructions.h
include/common/onegin/: ForIndexes.h  struct.h
include/common/stack/: Stack.h
include/compiler/: assembler.h  commands.h
include/processor/: processor.h
resources/programs/: circle.txt  factorial.txt  logfile.txt  square_full.txt  test.txt
src/common/onegin/: ForIndexes.cpp
src/common/stack/: Stack.cpp
src/compiler/: assembler.cpp  commands.cpp  main.cpp
src/processor/: main.cpp  processor.cpp
tools/: circle_generator.cpp
